--- a/src/app/pages/admin/save-values/save-values-detail/save-values-detail.component.html
+++ b/src/app/pages/admin/save-values/save-values-detail/save-values-detail.component.html
@@ -1,45 +1,59 @@
 <nb-card>
     <nb-card-body>
-        <form [formGroup]="form">
-
-            <div class="form-group row">
-                <input nbInput fullWidth formControlName="cve" matInput placeholder="Clave"
-                [status]="form.controls['cve']?.errors?.required  && form.controls['cve'].touched ? 'danger' : ''">
-                <label class="text-danger"
-                 *ngIf="validate['cve'].hasError('required') && form.controls['cve'].touched"><small>Ingrese un cv_guardaValor!</small></label>
-            </div>
+        <form [formGroup]="form">            
             
-            <div class="form-group row">
-                <input nbInput fullWidth formControlName="description" matInput placeholder="Descripción"
-                [status]="form.controls['description']?.errors?.required  && form.controls['description'].touched ? 'danger' : ''">
-                <label class="text-danger"
-                 *ngIf="validate['description'].hasError('required') && form.controls['description'].touched"><small>Ingrese una descripción!</small></label>
-            </div>
+            <div class="row">
+                
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <input nbInput fullWidth formControlName="cve" placeholder="Clave"
+>
+                        <label class="text-danger"
+                        *ngIf="validate['cve'].hasError('required') && form.controls['cve'].touched"><small>Ingrese una clave!</small></label>
+                    </div>
+                </div>
 
-            <div class="form-group row">
-                <input nbInput fullWidth formControlName="location" matInput placeholder="Ubicación"
-                [status]="form.controls['location']?.errors?.required  && form.controls['location'].touched ? 'danger' : ''">
-                <label class="text-danger"
-                 *ngIf="validate['location'].hasError('required') && form.controls['location'].touched"><small>Ingrese una Ubicación!</small></label>
-            </div>
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <input nbInput fullWidth formControlName="description" placeholder="Descripción"
+>
+                        <label class="text-danger"
+                        *ngIf="validate['description'].hasError('required') && form.controls['description'].touched"><small>Ingrese una descripción!</small></label>
+                    </div>
+                </div>
 
-            <div class="form-group row">
-                <input nbInput fullWidth formControlName="responsible" matInput placeholder="Responsable"
-                [status]="form.controls['responsible']?.errors?.required  && form.controls['responsible'].touched ? 'danger' : ''">
-                <label class="text-danger"
-                 *ngIf="validate['responsible'].hasError('required') && form.controls['responsible'].touched"><small>Ingrese un Responsable!</small></label>
-            </div>
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <input nbInput fullWidth formControlName="location" placeholder="Ubicación"
+                        >
+                        <label class="text-danger"
+                        *ngIf="validate['location'].hasError('required') && form.controls['location'].touched"><small>Ingrese una Ubicación!</small></label>
+                    </div>
+                </div>
 
-            <div class="form-group row">
-                <input nbInput fullWidth formControlName="noRegistration" matInput placeholder="Número de registro"
-                [status]="form.controls['noRegistration']?.errors?.required  && form.controls['noRegistration'].touched ? 'danger' : ''">
-                <label class="text-danger"
-                 *ngIf="validate['noRegistration'].hasError('required') && form.controls['noRegistration'].touched"><small>Ingrese un número de registro!</small></label>
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <input nbInput fullWidth formControlName="responsible" placeholder="Responsable"
+                        >
+                        <label class="text-danger"
+                        *ngIf="validate['responsible'].hasError('required') && form.controls['responsible'].touched"><small>Ingrese un Responsable!</small></label>
+                    </div>
+                </div>
+
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <input nbInput fullWidth formControlName="noRegistration" placeholder="Número de registro"
+                        >
+                        <label class="text-danger"
+                        *ngIf="validate['noRegistration'].hasError('required') && form.controls['noRegistration'].touched"><small>Ingrese un número de registro!</small></label>
+                    </div>
+                </div>
             </div>
        
-            <div class="form-group row">
-                <div class="offset-sm-3 col-sm-9">
-                    <button type="submit" nbButton status="primary" [disabled]="!form.valid" (click)="register()">{{actionBtn}}</button>
+            <div class="form-group">
+                <div class="d-flex justify-content-center">
+                    <button type="submit" nbButton status="primary" [disabled]="!form.valid"
+                        (click)="register()">{{actionBtn}}</button>
                 </div>
             </div>
         </form>
