--- a/src/app/pages/admin/type-docto/type-docto-detail/type-docto-detail.component.html
+++ b/src/app/pages/admin/type-docto/type-docto-detail/type-docto-detail.component.html
@@ -1,27 +1,40 @@
 <nb-card>
     <nb-card-body>
         <form [formGroup]="form">
-            <div class="form-group row">
-                <input nbInput fullWidth formControlName="id" matInput placeholder="Identificador">
-                <label class="text-danger" *ngIf="validateOpinion['id'].hasError('pattern')"><small>Id no válido!</small></label>
-            </div>
-            <div class="form-group row">
-                <input nbInput fullWidth formControlName="description" matInput placeholder="Descripcion">
-                <label class="text-danger" *ngIf="validateOpinion['description'].hasError('pattern')"><small>Descripcion no válido!</small></label>
-            </div>
-            <div class="form-group row">
-                <input nbInput fullWidth formControlName="version" matInput placeholder="Version">
-                <label class="text-danger" *ngIf="validateOpinion['version'].hasError('pattern')"><small>Version no  válido!</small></label>
-            </div>
-            <div class="form-group row">
-                <input nbInput fullWidth formControlName="estatus" matInput placeholder="Estatus">
-                <label class="text-danger" *ngIf="validateOpinion['estatus'].hasError('pattern')"><small>Estatus  válido!</small></label>
-            </div>
-         
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <input nbInput fullWidth formControlName="id" placeholder="Identificador">
+                        <label class="text-danger" *ngIf="validateOpinion['id'].hasError('pattern')"><small>Id no válido!</small></label>
+                    </div>
+                </div>
 
-            <div class="form-group row">
-                <div class="offset-sm-3 col-sm-9">
-                    <button type="submit" nbButton status="primary" [disabled]="!form.valid" (click)="register()">{{actionBtn}}</button>
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <input nbInput fullWidth formControlName="description" placeholder="Descripción">
+                        <label class="text-danger" *ngIf="validateOpinion['description'].hasError('pattern')"><small>Descripcion no válido!</small></label>
+                    </div>
+                </div>
+
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <input nbInput fullWidth formControlName="version" placeholder="Version">
+                        <label class="text-danger" *ngIf="validateOpinion['version'].hasError('pattern')"><small>Version no  válido!</small></label>
+                    </div>
+                </div>
+
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <input nbInput fullWidth formControlName="estatus" placeholder="Estatus">
+                        <label class="text-danger" *ngIf="validateOpinion['estatus'].hasError('pattern')"><small>Estatus  válido!</small></label>
+                    </div>
+                </div>
+            </div>         
+
+            <div class="form-group">
+                <div class="d-flex justify-content-center">
+                    <button type="submit" nbButton status="primary" [disabled]="!form.valid"
+                        (click)="register()">{{actionBtn}}</button>
                 </div>
             </div>
         </form>
