--- a/src/app/pages/admin/type-order-service/type-order-service-detail/type-order-service-detail.component.html
+++ b/src/app/pages/admin/type-order-service/type-order-service-detail/type-order-service-detail.component.html
@@ -1,17 +1,27 @@
 <nb-card>
     <nb-card-body>
         <form [formGroup]="form">
-            <div class="form-group row">
-                <input nbInput fullWidth formControlName="cve" matInput placeholder="Clave">
-                <label class="text-danger" *ngIf="validateOpinion['cve'].hasError('pattern')"><small>Clave no válido!</small></label>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <input nbInput fullWidth formControlName="cve" placeholder="Clave">
+                        <label class="text-danger" *ngIf="validateOpinion['cve'].hasError('pattern')"><small>Clave no
+                                válido!</small></label>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <input nbInput fullWidth formControlName="description" placeholder="Descripción">
+                        <label class="text-danger" *ngIf="validateOpinion['description'].hasError('pattern')"><small>Descripción no
+                                válido!</small></label>
+                    </div>
+                </div>
             </div>
-            <div class="form-group row">
-                <input nbInput fullWidth formControlName="description" matInput placeholder="Descripcion">
-                <label class="text-danger" *ngIf="validateOpinion['description'].hasError('pattern')"><small>Descripcion no válido!</small></label>
-            </div>
-            <div class="form-group row">
-                <div class="offset-sm-3 col-sm-9">
-                    <button type="submit" nbButton status="primary" [disabled]="!form.valid" (click)="register()">{{actionBtn}}</button>
+
+            <div class="form-group">
+                <div class="d-flex justify-content-center">
+                    <button type="submit" nbButton status="primary" [disabled]="!form.valid"
+                        (click)="register()">{{actionBtn}}</button>
                 </div>
             </div>
         </form>
