--- a/src/app/pages/admin/type-relevant/type-relevant-detail/type-relevant-detail.component.html
+++ b/src/app/pages/admin/type-relevant/type-relevant-detail/type-relevant-detail.component.html
@@ -1,25 +1,41 @@
 <nb-card>
     <nb-card-body>
         <form [formGroup]="form">
-            <div class="form-group row">
-                <input nbInput fullWidth formControlName="description" matInput placeholder="Descripcion">
-                <label class="text-danger" *ngIf="validateOpinion['description'].hasError('pattern')"><small>Descripcion no válida!</small></label>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <input nbInput fullWidth formControlName="description" placeholder="Descripción">
+                        <label class="text-danger" *ngIf="validateOpinion['description'].hasError('pattern')"><small>Descripción no
+                                válido!</small></label>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <input nbInput fullWidth formControlName="version" placeholder="Versión">
+                        <label class="text-danger" *ngIf="validateOpinion['version'].hasError('pattern')"><small>Versión no
+                                válido!</small></label>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <input nbInput fullWidth formControlName="noPhotography" placeholder="Número fotografia">
+                        <label class="text-danger" *ngIf="validateOpinion['noPhotography'].hasError('pattern')"><small>Número fotografia no
+                                válido!</small></label>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <input nbInput fullWidth formControlName="detailsPhotography" placeholder="Detalle">
+                        <label class="text-danger" *ngIf="validateOpinion['detailsPhotography'].hasError('pattern')"><small>Detalle no
+                                válido!</small></label>
+                    </div>
+                </div>
             </div>
-            <div class="form-group row">
-                <input nbInput fullWidth formControlName="version" matInput placeholder="Version">
-                <label class="text-danger" *ngIf="validateOpinion['version'].hasError('pattern')"><small>Version no válido!</small></label>
-            </div>
-            <div class="form-group row">
-                <input nbInput fullWidth formControlName="noPhotography" matInput placeholder="Numero fotografia">
-                <label class="text-danger" *ngIf="validateOpinion['noPhotography'].hasError('pattern')"><small>Numero no válido!</small></label>
-            </div>
-            <div class="form-group row">
-                <input nbInput fullWidth formControlName="detailsPhotography" matInput placeholder="Detalle fotografia">
-                <label class="text-danger" *ngIf="validateOpinion['detailsPhotography'].hasError('pattern')"><small>Detalle no válido!</small></label>
-            </div>
-            <div class="form-group row">
-                <div class="offset-sm-3 col-sm-9">
-                    <button type="submit" nbButton status="primary" [disabled]="!form.valid" (click)="register()">{{actionBtn}}</button>
+
+            <div class="form-group">
+                <div class="d-flex justify-content-center">
+                    <button type="submit" nbButton status="primary" [disabled]="!form.valid"
+                        (click)="register()">{{actionBtn}}</button>
                 </div>
             </div>
         </form>
