--- a/src/app/pages/admin/mailbox-status/mailbox-status-detail/mailbox-status-detail.component.html
+++ b/src/app/pages/admin/mailbox-status/mailbox-status-detail/mailbox-status-detail.component.html
@@ -1,20 +1,29 @@
 <nb-card>
-    <nb-card-body>
-        <form [formGroup]="form">
-            <div class="form-group row">
-                <input nbInput fullWidth formControlName="description" matInput placeholder="Descripcion">
-                <label class="text-danger" *ngIf="validateOpinion['description'].hasError('pattern')"><small>Descripcion no válido!</small></label>
-            </div>
-            <div class="form-group row">
-                <input nbInput fullWidth formControlName="noRegistration" matInput placeholder="Numero de registro">
-                <label class="text-danger" *ngIf="validateOpinion['noRegistration'].hasError('pattern')"><small>Numero de registro no válido!</small></label>
-            </div>
-        
-            <div class="form-group row">
-                <div class="offset-sm-3 col-sm-9">
-                    <button type="submit" nbButton status="primary" [disabled]="!form.valid" (click)="register()">{{actionBtn}}</button>
-                </div>
-            </div>
-        </form>
-    </nb-card-body>
+  <nb-card-body>
+    <form [formGroup]="form">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="form-group">
+            <input nbInput fullWidth formControlName="description" matInput placeholder="Descripcion">
+            <label class="text-danger" *ngIf="validateOpinion['description'].hasError('pattern')"><small>Descripcion no
+                válido!</small></label>
+          </div>
+        </div>
+        <div class="col-md-12">
+          <div class="form-group">
+            <input nbInput fullWidth formControlName="noRegistration" matInput placeholder="Numero de registro">
+            <label class="text-danger" *ngIf="validateOpinion['noRegistration'].hasError('pattern')"><small>Numero de
+                registro no válido!</small></label>
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="d-flex justify-content-center">
+          <button type="submit" nbButton status="primary" [disabled]="!form.valid"
+            (click)="register()">{{actionBtn}}</button>
+        </div>
+      </div>
+    </form>
+  </nb-card-body>
 </nb-card>
