--- a/src/app/pages/admin/type-goods/type-good-detail/type-good-detail.component.html
+++ b/src/app/pages/admin/type-goods/type-good-detail/type-good-detail.component.html
@@ -1,19 +1,27 @@
 <nb-card>
     <nb-card-body>
         <form [formGroup]="form">
-            <div class="form-group row">
-                <input nbInput fullWidth formControlName="name" matInput placeholder="Nombre">
-                <label class="text-danger" *ngIf="validateOpinion['name'].hasError('pattern')"><small>Nombre no válido!</small></label>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <input nbInput fullWidth formControlName="name" placeholder="Descripción">
+                        <label class="text-danger" *ngIf="validateOpinion['name'].hasError('pattern')"><small>Descripción no
+                                válido!</small></label>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <input nbInput fullWidth formControlName="version" placeholder="Versión">
+                        <label class="text-danger" *ngIf="validateOpinion['version'].hasError('pattern')"><small>Versión no
+                                válido!</small></label>
+                    </div>
+                </div>
             </div>
-            <div class="form-group row">
-                <input nbInput fullWidth formControlName="version" matInput placeholder="version">
-                <label class="text-danger" *ngIf="validateOpinion['version'].hasError('pattern')"><small>Ingrese una version  válido!</small></label>
-            </div>
-         
 
-            <div class="form-group row">
-                <div class="offset-sm-3 col-sm-9">
-                    <button type="submit" nbButton status="primary" [disabled]="!form.valid" (click)="register()">{{actionBtn}}</button>
+            <div class="form-group">
+                <div class="d-flex justify-content-center">
+                    <button type="submit" nbButton status="primary" [disabled]="!form.valid"
+                        (click)="register()">{{actionBtn}}</button>
                 </div>
             </div>
         </form>
