--- a/src/app/pages/admin/type-warehouses/type-warehouses-list/type-warehouses-list.component.html
+++ b/src/app/pages/admin/type-warehouses/type-warehouses-list/type-warehouses-list.component.html
@@ -2,7 +2,7 @@
     <nb-card-header>
 
         <span class="title">
-            Lista de almacen
+            Lista de almacenes
         </span>
 
         <div class="add-select">
@@ -12,6 +12,16 @@
     </nb-card-header>
 
     <nb-card-body>
+        
+        <div [formGroup]="searchForm" class="form-group row">
+            <div class="col-md-1 mt-2">
+                <label class="control-label">Buscar: </label>
+            </div>
+            <div class="col-md-4">
+              <input type="text" formControlName="text"  class="form-control" autofocus/>
+            </div>
+        </div>
+
         <ng2-smart-table [settings]="settings" [source]="list" (delete)="onDeleteConfirm($event)"
             (edit)="editRow($event)">
         </ng2-smart-table>
