--- a/src/app/pages/admin/score/score-list/score-list.component.html
+++ b/src/app/pages/admin/score/score-list/score-list.component.html
@@ -1,11 +1,10 @@
 <nb-card class="cat-card">
     <nb-card-header>
         <span class="title">
-            Puntuaciones
+            Lista de puntuaciones
         </span>
-
         <div class="add-select">
-            <button (click)="openWindow()" nbButton status="primary">Nueva</button>
+            <button (click)="openWindow()"nbButton status="primary">Nueva</button>
         </div>
     </nb-card-header>
 
@@ -18,11 +17,17 @@
                 <input type="text" formControlName="text" class="form-control" autofocus />
             </div>
         </div>
-        <ng2-smart-table [settings]="settings" [source]="rows" (delete)="onDeleteConfirm($event)"
+
+        <ng2-smart-table [settings]="settings" [source]="list" (delete)="onDeleteConfirm($event)"
             (edit)="editRow($event)">
         </ng2-smart-table>
-        <mat-paginator [length]="length" [pageSize]="pageSize" [pageSizeOptions]="pageSizeOptions"
-            (page)="changesPage($event)" [pageIndex]="pageEvent.pageIndex">
+        <mat-paginator [length]="length"
+               [pageSize]="pageSize"
+               [pageSizeOptions]="pageSizeOptions"
+               (page)="changesPage($event)"
+               [pageIndex] ="pageEvent.pageIndex"
+               >
         </mat-paginator>
+
     </nb-card-body>
 </nb-card>
