--- a/src/app/pages/admin/origin-cisi/origin-cisi-list/origin-cisi-list.component.html
+++ b/src/app/pages/admin/origin-cisi/origin-cisi-list/origin-cisi-list.component.html
@@ -19,7 +19,7 @@
     </div>
       <ng2-smart-table 
         [settings]="settings" 
-        [source]="rows" 
+        [source]="list" 
         (delete)="onDeleteConfirm($event)"
         (edit)="editRow($event)">
       </ng2-smart-table>
