--- a/src/app/pages/admin/question/question-list/question-list.component.html
+++ b/src/app/pages/admin/question/question-list/question-list.component.html
@@ -17,7 +17,7 @@
         <input type="text" formControlName="text" class="form-control" autofocus />
       </div>
     </div>
-    <ng2-smart-table [settings]="settings" [source]="rows" (delete)="onDeleteConfirm($event)" (edit)="editRow($event)">
+    <ng2-smart-table [settings]="settings" [source]="list" (delete)="onDeleteConfirm($event)" (edit)="editRow($event)">
     </ng2-smart-table>
     <mat-paginator [length]="length" [pageSize]="pageSize" [pageSizeOptions]="pageSizeOptions"
       (page)="changesPage($event)" [pageIndex]="pageEvent.pageIndex">
